--- a/embeddingOriginalWork.html
+++ b/embeddingOriginalWork.html
@@ -12,7 +12,7 @@
 
     <body>
         <h1>This is for Apprentice part</h1>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/Uvufun6xer8?start=180" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/Uvufun6xer8?start=180;?" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <video width="250" height="200" controls><source src="costrica.mp4" type="video/mp4"><source src="costrica.ogg" type="video/ogg"> </video>
         <object width="300" height="300" data="https://styles.redditmedia.com/t5_2razk/styles/communityIcon_epbobd8lm1u41.jpg?width=256&format=pjpg&s=cffc0272bc26c3435aecee5ca8272a036424b03c"> </object>
 
@@ -22,8 +22,11 @@
         <h1>This is for master part</h1>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/exM1uajp--A?start=180" title="YouTube video player" frameborder="0"  allowfullscree = "false" loading = "lazy"></iframe>
         <video width="320" height="240" controls><source src="costrica.mp4" type="video/mp4"><source src="costrica.ogg" type="video/ogg"> </video>
-        <audio controls><source src="horse.ogg" type="audio/ogg"><source src="horse.mp3" type="audio/mpeg"></audio>
+        <audio controls><source src="HoldmyHand.ogg" type="audio/ogg"><source src="HoldmyHand.mp3" type="audio/mpeg"></audio>
         <object width="400" height="300"data="https://www.youtube.com/embed/il_t1WVLNxk"></object>
-        <script src="//rss.bloople.net/?url=file%3A%2F%2F%2FC%3A%2FUsers%2FAndrew%2FDesktop%2Finfo%2520101%2FembeddingOriginalWork.html&showtitle=false&type=js"></script>
+        <li><a href ="https://www.jpl.nasa.gov/feeds/news/">NASA RSS</a></li>
+
+
     </body>
 </html>
+
