--- a/embeddingOriginalWork.html
+++ b/embeddingOriginalWork.html
@@ -12,16 +12,16 @@
 
     <body>
         <h1>This is for Apprentice part</h1>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/Uvufun6xer8?start=180;?" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <video width="250" height="200" controls><source src="costrica.mp4" type="video/mp4"><source src="costrica.ogg" type="video/ogg"> </video>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/Uvufun6xer8?start=180" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <video width="500" height="300" controls><source src="burrowTochase.mp4" type="video/mp4"><source src="burrowTochase.ogg" type="video/ogg"> </video>
         <object width="300" height="300" data="https://styles.redditmedia.com/t5_2razk/styles/communityIcon_epbobd8lm1u41.jpg?width=256&format=pjpg&s=cffc0272bc26c3435aecee5ca8272a036424b03c"> </object>
 
     </body>
 
     <body>
         <h1>This is for master part</h1>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/exM1uajp--A?start=180" title="YouTube video player" frameborder="0"  allowfullscree = "false" loading = "lazy"></iframe>
-        <video width="320" height="240" controls><source src="costrica.mp4" type="video/mp4"><source src="costrica.ogg" type="video/ogg"> </video>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/exM1uajp--A?start=180&mute=1" title="YouTube video player" frameborder="0"  allowfullscree = "false" loading = "lazy"></iframe>
+        <video width="500" height="300" controls><source src="burrowTochase.mp4" type="video/mp4"><source src="burrowTochase.ogg" type="video/ogg"> </video>
         <audio controls><source src="HoldmyHand.ogg" type="audio/ogg"><source src="HoldmyHand.mp3" type="audio/mpeg"></audio>
         <object width="400" height="300"data="https://www.youtube.com/embed/il_t1WVLNxk"></object>
         <li><a href ="https://www.jpl.nasa.gov/feeds/news/">NASA RSS</a></li>
