--- a/embeddingOriginalWork.html
+++ b/embeddingOriginalWork.html
@@ -24,9 +24,7 @@
         <video width="500" height="300" controls><source src="burrowTochase.mp4" type="video/mp4"><source src="burrowTochase.ogg" type="video/ogg"> </video>
         <audio controls><source src="HoldmyHand.ogg" type="audio/ogg"><source src="HoldmyHand.mp3" type="audio/mpeg"></audio>
         <object width="400" height="300"data="https://www.youtube.com/embed/il_t1WVLNxk"></object>
-        <li><a href ="https://www.jpl.nasa.gov/feeds/news/">NASA RSS</a></li>
-
-
-    </body>
+        <p>RSS Feed</p>
+        <iframe width="900" height="1600" src="https://rss.app/embed/v1/wall/EfMuxXuZMeg53cX0" frameborder="0"></iframe>
 </html>
 
