--- a/someCss.html
+++ b/someCss.html
@@ -14,10 +14,6 @@
         .p2 {
             font-family: "Lucida Handwriting", cursive;
         }
-        /* img {
-            width: 50px;
-            height: 50px;
-        } */
         .container {
             position: relative;
             text-align: center;
@@ -29,11 +25,18 @@
             left: 50%;
             transform: translate(-50%, -50%);
         }
-        #twenPixel {
+        .p3 {
+            text-shadow: 2px 2px;
+        }
+        #margin {
             margin-top: 30px;
             margin-bottom: 30px;
             margin-right: 30px;
             margin-left: 30px;
+        }
+        .image {
+            height: 50px;
+            width: 50px;
         }
         p.dotted {border-style: dotted;}
         </style>
@@ -42,14 +45,19 @@
         <h1>Newbie</h1>
         <p class="p1">This is a time new roman paragraph</p>
         <p class="p2">This is a cursive paragraph</p>
-        <img src="IU_-_Lilac.png" width="100" height="100">
-        <img src="sea.png" width="100" height="100">
+        <div class="image">
+            <img class = image src="IU_-_Lilac.png">
+        </div>
+        <div class="image">
+            <img class = image src="sea.png">
+        </div>
+        <p class="p3">This is a shadow effect</p>
         <h1>Apprentice</h1>
         <div class="container">
             <object width="200" height="200"data="light.jpg"></object>
             <div class="centered">center of pic</div>
         </div>
-        <div id = "twenPixel">
+        <div id = "margin">
             <object width="100" height="100"data="IU_-_Lilac.png"></object>
         </div>
         <p class="dotted">Text with a border that uses dotted lines</p>
@@ -60,4 +68,4 @@
         <p id="rounded">Rounded</p>
         
     </body>
-</html>   
+</html>  
