--- a/jobApplicationForm.html
+++ b/jobApplicationForm.html
@@ -9,34 +9,10 @@
 <body>
 <div class="container">
 
-<h2>Job Application</h2>
+<h2>Software Engineering Internship Application</h2>
 <p>&nbsp;</p>
  
 <form role="form" action="http://gclass.alexburner.com/formtest.php" method="post">
-
-	<fieldset class="form-horizontal" >
-		<legend>Account</legend>
-		<div class="form-group">
-			<label class="col-sm-3 control-label">Email</label>
-			<div class="col-sm-9">
-				<input class="form-control" type="text" name="email">
-			</div>
-		</div>
-		<div class="form-group">
-			<label class="col-sm-3 control-label">Password</label>
-			<div class="col-sm-9">
-				<input class="form-control" type="password" name="password">
-			</div>
-		</div>
-		<div class="form-group">
-			<label class="col-sm-3 control-label">Repeat password</label>
-			<div class="col-sm-9">
-				<input class="form-control" type="password" name="repeat_password">
-			</div>
-		</div>
-	</fieldset>
-
-	<p>&nbsp;</p>
 
 	<fieldset class="form-horizontal" >
 		<legend>Personal Information</legend>
@@ -146,6 +122,12 @@
 				<input class="form-control" type="text" name="major">
 			</div>
 		</div>
+		<div class="form-group">
+			<label class="col-sm-3 control-label">Major</label>
+			<div class="col-sm-9">
+				<input class="form-control" type="text" name="major">
+			</div>
+		</div>
 	</fieldset>
 	<p>&nbsp;</p>
 
@@ -162,6 +144,21 @@
 				<div class="radio">
 					<label>
 						<input type="radio" name="legal" value="no">No
+					</label>
+				</div>
+			</div>
+		</div>
+		<div class="form-group row">
+			<label class="col-sm-12 control-label">“Do you require sponsorship now or in the future?</label>
+			<div class="col-sm-offset-1 col-sm-11">
+				<div class="radio">
+					<label>
+						<input type="radio" name="visa" value="yes">Yes
+					</label>
+				</div>
+				<div class="radio">
+					<label>
+						<input type="radio" name="visa" value="no">No
 					</label>
 				</div>
 			</div>
@@ -248,7 +245,7 @@
 		</div>
 		<div class="form-group">
 			<label class="control-label">How did you hear about this job</label>
-			<textarea class="form-control" name="letter" rows="3"></textarea>
+			<textarea class="form-control" name="hear" rows="3"></textarea>
 		</div>
 	</fieldset>
 	<p>&nbsp;</p>
