--- a/jobApplicationForm.html
+++ b/jobApplicationForm.html
@@ -123,11 +123,29 @@
 			</div>
 		</div>
 		<div class="form-group">
-			<label class="col-sm-3 control-label">Major</label>
+			<label class="col-sm-3 control-label">Concentration</label>
 			<div class="col-sm-9">
-				<input class="form-control" type="text" name="major">
+				<input class="form-control" type="text" name="concentration">
 			</div>
 		</div>
+		<label class="col-sm-3 control-label">Expected graudation month</label>
+			<div class="col-sm-9">
+				<select class="form-control" name="state">
+					<option value="" selected="true">Please select</option>
+					<option value="1">January</option>
+					<option value="2">Febuary</option>
+					<option value="3">March</option>
+					<option value="4">April</option>
+					<option value="5">May</option>
+					<option value="6">June</option>
+					<option value="7">July</option>
+					<option value="8">August</option>
+					<option value="9">September</option>
+					<option value="10">October</option>
+					<option value="11">November</option>
+					<option value="12">December</option>
+				</select>
+			</div>
 	</fieldset>
 	<p>&nbsp;</p>
 
@@ -236,12 +254,8 @@
 	<fieldset>
 		<legend>Personal Statement</legend>
 		<div class="form-group">
-			<label class="control-label">Why do you deserve this job?</label>
+			<label class="control-label">Why do you think you fit on this position?</label>
 			<textarea class="form-control" name="deserve" rows="6"></textarea>
-		</div>
-		<div class="form-group">
-			<label class="control-label">Describe a recent project</label>
-			<textarea class="form-control" name="project" rows="6"></textarea>
 		</div>
 		<div class="form-group">
 			<label class="control-label">How did you hear about this job</label>
